--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,22 @@ function renderResult(score, riskKey) {
          <p class="result-note">${t.resultNote}</p>`;
 }
 </script>
+</div>  <!-- Закінчення головного контейнера -->
+
+<footer style="
+    margin-top: 40px;
+    padding: 20px;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+    border-top: 1px solid #e0e0e0;">
+    © 2025 Yuliia Moskalenko. All rights reserved.  
+    <br>
+    Version 1.0 · IMMU-LUNG SCORE
+</footer>
+
+</body>
+</html>
 
 </body>
 </html>
