--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
 <script>
 const translations = {
     uk: {
-        titleMain: "Прогностичний калькулятор відповіді на інгібітори імунних контрольних точок",
-        titleSubtitle: "IMMU-LUNG SCORE: інструмент стратифікації ризику та прогнозу загальної виживаності у хворих на метастатичний НДРЛ, що планують отримувати імунотерапію.",
+        titleMain: "IMMU-LUNG: Прототип цифрової платформи підтримки клінічних рішень",
+        titleSubtitle: "Прогностичний модуль для оцінки відповіді на інгібітори імунних контрольних точок (ІІКТ) у пацієнтів з метастатичним недрібноклітинним раком легень.",
         cardParamsTitle: "Клініко-біологічні параметри",
         cardResultTitle: "Результат",
 
@@ -582,8 +582,8 @@ const translations = {
         ,nccnButton: "Перейти до NCCN-guidelines"
     },
     en: {
-        titleMain: "Prognostic calculator for response to immune checkpoint inhibitors",
-        titleSubtitle: "IMMU-LUNG SCORE: a risk stratification tool for overall survival in patients with metastatic NSCLC scheduled for immunotherapy.",
+        titleMain: "IMMU-LUNG: Prototype of a digital clinical decision-support platform",
+        titleSubtitle: "Prognostic module for assessing response to immune checkpoint inhibitors (ICIs) in patients with metastatic non-small cell lung cancer.",
         cardParamsTitle: "Clinical and biological parameters",
         cardResultTitle: "Result",
 
